--- a/BoboCentylv2.ipynb
+++ b/BoboCentylv2.ipynb
@@ -32,8 +32,8 @@
     "import xlrd\n",
     "\n",
     "# Ścieżki do plików\n",
-    "sciezka_percentiles = r'C:\\Users\\rober\\Documents\\Robert\\Nauka\\Ebooki naukowe\\Informatyka\\PROJEKTY\\BoboCentyl\\Dane WHO\\2 WFA\\wfa-girls-percentiles-expanded-tables.xlsx'\n",
-    "sciezka_z_scores = r'C:\\Users\\rober\\Documents\\Robert\\Nauka\\Ebooki naukowe\\Informatyka\\PROJEKTY\\BoboCentyl\\Dane WHO\\2 WFA\\wfa-girls-zscore-expanded-tables.xlsx'\n",
+    "sciezka_percentiles = data/wfa-girls-percentiles-expanded-tables.xlsx'\n",
+    "sciezka_z_scores = data/wfa-girls-zscore-expanded-tables.xlsx'\n",
     "\n",
     "# Wczytanie danych\n",
     "df_percentiles = pd.read_excel(sciezka_percentiles)\n",
